--- a/app/elements/tpa-money-transfer/src/package.json
+++ b/app/elements/tpa-money-transfer/src/package.json
@@ -3,12 +3,16 @@
   "description": "",
   "devDependencies": {
     "gulp": "^3.8.10",
+    "gulp-batch": "^1.0.5",
     "gulp-concat": "^2.6.0",
     "gulp-i18n-localize": "^1.1.0",
     "gulp-less": "^3.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-strip-comments": "^2.4.3",
-    "gulp-tap": "^0.1.3"
+    "gulp-tap": "^0.1.3",
+    "gulp-watch": "^4.3.5",
+    "minimist": "^1.2.0"
   },
   "author": "",
   "license": "ISC"
