--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-uglify": "^1.2.0",
     "gulp-useref": "^3.0.5",
     "gulp-vulcanize": "^6.0.0",
+    "http-proxy-middleware": "^0.15.0",
     "merge-stream": "^1.0.0",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.0.2",
