--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "browser-sync": "^2.7.7",
     "connect-history-api-fallback": "^1.1.0",
     "del": "^2.0.2",
-    "drakov": "git+https://github.com/abowen/drakov.git",
+    "drakov": "git+https://github.com/abowen/drakov.git#master",
     "es6-promise": "^3.1.2",
     "glob-all": "^3.0.1",
     "gulp": "^3.8.5",
@@ -29,7 +29,8 @@
     "require-dir": "^0.3.0",
     "run-sequence": "^1.0.2",
     "vulcanize": ">= 1.4.2",
-    "web-component-tester": "^4.0.0"
+    "web-component-tester": "^4.0.0",
+    "web-component-tester-istanbul": "^0.10.0"
   },
   "scripts": {
     "test": "gulp test:local",
