moving more elements to their own repos

--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,10 @@
     "polymer": "Polymer/polymer#^1.4.0",
     "tpa-top-bar": "https://github.com/ING-Group/tpa-top-bar.git",
     "tpa-nav-bar": "https://github.com/ING-Group/tpa-nav-bar.git",
-    "tpa-icons": "https://github.com/ING-Group/tpa-icons.git"
+    "tpa-icons": "https://github.com/ING-Group/tpa-icons.git",
+    "tpa-transaction-list": "https://github.com/ING-Group/tpa-transaction-list.git",
+    "tpa-i18n": "https://github.com/ING-Group/tpa-i18n.git",
+    "tpa-region-selection": "https://github.com/ING-Group/tpa-region-selection.git"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
