adding app-route to bower

--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "tpa-i18n": "https://github.com/ING-Group/tpa-i18n.git",
     "tpa-region-selection": "https://github.com/ING-Group/tpa-region-selection.git",
     "tpa-globals": "https://github.com/ING-Group/tpa-globals.git",
-    "tpa-dashboard": "https://github.com/ING-Group/tpa-dashboard.git"
+    "tpa-dashboard": "https://github.com/ING-Group/tpa-dashboard.git",
+    "app-route": "PolymerElements/app-route#^0.9.1"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
