--- a/bower.json
+++ b/bower.json
@@ -21,5 +21,8 @@
   "devDependencies": {
     "web-component-tester": "^4.0.0"
   },
-  "ignore": []
+  "ignore": [],
+  "scripts": {
+    "postinstall": "gulp fix-api-eol"
+  }
 }
