--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "gulp": "^3.8.5",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-cache": "^0.4.0",
-    "gulp-changed": "^1.0.0",
+    "gulp-changed": "^1.0.0",    
     "gulp-gh-pages": "^0.5.4",
     "gulp-html-extract": "^0.1.0",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.2.1",
+    "gulp-line-ending-corrector": "^1.0.1",
     "gulp-load-plugins": "^1.1.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-minify-html": "^1.0.2",
