--- a/app/manifest.json
+++ b/app/manifest.json
@@ -36,5 +36,6 @@
       }],
   "background_color": "#3E4EB8",
   "display": "standalone",
-  "theme_color": "#2E3AA1"
+  "theme_color": "#2E3AA1",
+  "start_url": "/?homescreen=1"
 }
