--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,11 @@
     "page": "visionmedia/page.js#~1.6.4",
     "paper-elements": "PolymerElements/paper-elements#^1.0.7",
     "platinum-elements": "PolymerElements/platinum-elements#^1.2.0",
-    "polymer": "Polymer/polymer#^1.4.0"
+    "polymer": "Polymer/polymer#^1.4.0",
+    "tpa-font": "git://github.com/ING-Group/tpa-font.git",
+    "tpa-styles": "git://github.com/ING-Group/tpa-styles.git",
+    "tpa-icons": "git://github.com/ING-Group/tpa-icons.git",
+    "tpa-nav-bar": "git://github.com/ING-Group/tpa-nav-bar.git"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
