--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,41 +1,45 @@
 {
-  "name": "Polymer Starter Kit",
-  "short_name": "Polymer Starter Kit",
+  "name": "ING TPA Bootstrap",
+  "short_name": "ING TPA",
   "icons": [{
-        "src": "images/touch/icon-72x72.png",
+        "src": "images/ingtouch/72.png",
         "sizes": "72x72",
         "type": "image/png"
       }, {
-        "src": "images/touch/icon-96x96.png",
+        "src": "images/ingtouch/96.png",
         "sizes": "96x96",
         "type": "image/png"
       }, {
-        "src": "images/touch/icon-128x128.png",
+        "src": "images/touch/128.png",
         "sizes": "128x128",
         "type": "image/png"
+      },{
+        "src": "images/ingtouch/114.png",
+        "sizes": "114x114",
+        "type": "image/png"
       }, {
-        "src": "images/touch/ms-touch-icon-144x144-precomposed.png",
+        "src": "images/ingtouch/144.png",
         "sizes": "144x144",
         "type": "image/png"
       }, {
-        "src": "images/touch/apple-touch-icon.png",
+        "src": "images/ingtouch/152.png",
         "sizes": "152x152",
         "type": "image/png"
       }, {
-        "src": "images/touch/chrome-touch-icon-192x192.png",
+        "src": "images/ingtouch/192.png",
         "sizes": "192x192",
         "type": "image/png"
       },{
-        "src": "images/touch/chrome-splashscreen-icon-384x384.png",
+        "src": "images/ingtouch/384.png",
         "sizes": "384x384",
         "type": "image/png"
       },{
-        "src": "images/touch/icon-512x512.png",
+        "src": "images/ingtouch/512.png",
         "sizes": "512x512",
         "type": "image/png"
       }],
-  "background_color": "#3E4EB8",
+  "background_color": "#FF6200",
   "display": "standalone",
-  "theme_color": "#2E3AA1",
-  "start_url": "/?homescreen=1"
+  "theme_color": "#FF6200",
+  "start_url": "./#/home"
 }
