--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,8 @@
     "tpa-region-selection": "https://github.com/ING-Group/tpa-region-selection.git",
     "tpa-globals": "https://github.com/ING-Group/tpa-globals.git",
     "tpa-dashboard": "https://github.com/ING-Group/tpa-dashboard.git",
+    "tpa-styles": "https://github.com/ING-Group/tpa-styles.git",
+    "tpa-font": "https://github.com/ING-Group/tpa-font.git",
     "app-route": "PolymerElements/app-route#^0.9.1",
     "app-layout": "PolymerElements/app-layout#^0.9.0"
   },
