Use the tpa-mortgage-calculation repository

--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "tpa-dashboard": "https://github.com/ING-Group/tpa-dashboard.git",
     "tpa-styles": "https://github.com/ING-Group/tpa-styles.git",
     "tpa-font": "https://github.com/ING-Group/tpa-font.git",
+    "tpa-mortgage-calculation": "https://github.com/ING-Group/tpa-mortgage-calculation.git",
     "app-route": "PolymerElements/app-route#^0.9.1",
     "app-layout": "PolymerElements/app-layout#^0.9.0"
   },
