--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "tpa-styles": "https://github.com/ING-Group/tpa-styles.git",
     "tpa-font": "https://github.com/ING-Group/tpa-font.git",
     "tpa-mortgage-calculation": "https://github.com/ING-Group/tpa-mortgage-calculation.git",
+    "tpa-money-transfer": "https://github.com/ING-Group/tpa-money-transfer.git",
     "app-route": "PolymerElements/app-route#^0.9.1",
     "app-layout": "PolymerElements/app-layout#^0.9.0"
   },
