use tpa-ajax for bootstrap data. Dropped the separate component

--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "tpa-icons": "https://github.com/ING-Group/tpa-icons.git",
     "tpa-transaction-list": "https://github.com/ING-Group/tpa-transaction-list.git",
     "tpa-i18n": "https://github.com/ING-Group/tpa-i18n.git",
+    "tpa-ajax": "https://github.com/ING-Group/tpa-ajax.git",
     "tpa-region-selection": "https://github.com/ING-Group/tpa-region-selection.git",
     "tpa-globals": "https://github.com/ING-Group/tpa-globals.git",
     "tpa-dashboard": "https://github.com/ING-Group/tpa-dashboard.git",
