--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ addons:
       - google-chrome-stable
 node_js:  
   - '4.2'
-  - '5.1'
+  - '5.2'
 cache:
   directories:
     - node_modules
@@ -18,7 +18,7 @@ before_script:
   - 'export DISPLAY=:99.0'
   - sh -e /etc/init.d/xvfb start
   - sleep 3
-  - npm i -g bower@1.7.1 gulp@3.9.0 firebase-tools@2.2.0
+  - npm i -g bower@1.7.1 gulp@3.9.0 polymer-cli
   - bower i
 script:
   - ./travis-runner.sh
