--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "devDependencies": {
     "browser-sync": "^2.7.7",
     "connect-history-api-fallback": "^1.1.0",
+    "dateformat": "^1.0.12",
     "del": "^2.0.2",
     "drakov": "git+https://github.com/abowen/drakov.git#master",
     "es6-promise": "^3.1.2",
