--- a/bower.json
+++ b/bower.json
@@ -8,21 +8,22 @@
     "paper-elements": "PolymerElements/paper-elements#^1.0.7",
     "platinum-elements": "PolymerElements/platinum-elements#^2.0.0",
     "polymer": "Polymer/polymer#^1.4.0",
-    "tpa-top-bar": "https://github.com/ING-Group/tpa-top-bar.git",
-    "tpa-nav-bar": "https://github.com/ING-Group/tpa-nav-bar.git",
-    "tpa-icons": "https://github.com/ING-Group/tpa-icons.git",
-    "tpa-transaction-list": "https://github.com/ING-Group/tpa-transaction-list.git",
-    "tpa-i18n": "https://github.com/ING-Group/tpa-i18n.git",
-    "tpa-ajax": "https://github.com/ING-Group/tpa-ajax.git",
-    "tpa-region-selection": "https://github.com/ING-Group/tpa-region-selection.git",
-    "tpa-globals": "https://github.com/ING-Group/tpa-globals.git",
-    "tpa-dashboard": "https://github.com/ING-Group/tpa-dashboard.git",
-    "tpa-styles": "https://github.com/ING-Group/tpa-styles.git",
-    "tpa-font": "https://github.com/ING-Group/tpa-font.git",
-    "tpa-mortgage-calculation": "https://github.com/ING-Group/tpa-mortgage-calculation.git",
-    "tpa-money-transfer": "https://github.com/ING-Group/tpa-money-transfer.git",
     "app-route": "PolymerElements/app-route#^0.9.1",
-    "app-layout": "PolymerElements/app-layout#^0.9.0"
+    "app-layout": "PolymerElements/app-layout#^0.9.0",    
+    "tpa-top-bar": "ING-Group/tpa-top-bar",
+    "tpa-nav-bar": "ING-Group/tpa-nav-bar",
+    "tpa-icons": "ING-Group/tpa-icons",
+    "tpa-transaction-list": "ING-Group/tpa-transaction-list",
+    "tpa-i18n": "ING-Group/tpa-i18n",
+    "tpa-ajax": "ING-Group/tpa-ajax",
+    "tpa-region-selection": "ING-Group/tpa-region-selection",
+    "tpa-globals": "ING-Group/tpa-globals",
+    "tpa-dashboard": "ING-Group/tpa-dashboard",
+    "tpa-styles": "ING-Group/tpa-styles",
+    "tpa-font": "ING-Group/tpa-font",
+    "tpa-mortgage-calculation": "ING-Group/tpa-mortgage-calculation",
+    "tpa-money-transfer": "ING-Group/tpa-money-transfer",    
+    "tpa-feedback": "ING-Group/tpa-feedback"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
