--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "tpa-money-transfer": "ING-Group/tpa-money-transfer#remove_card_stuff",
     "tpa-feedback": "ING-Group/tpa-feedback",
     "tpa-toast-action": "ING-Group/tpa-toast-action",
-    "tpa-daily-banking": "ING-Group/tpa-daily-banking#demo"
+    "tpa-daily-banking": "ING-Group/tpa-daily-banking#demo",
+    "tpa-content-creditcard": "ING-Group/tpa-content-creditcard#sexy"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
