--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
     "page": "visionmedia/page.js#~1.6.4",
     "paper-elements": "PolymerElements/paper-elements#^1.0.7",
     "platinum-elements": "PolymerElements/platinum-elements#^2.0.0",
-    "polymer": "Polymer/polymer#^1.4.0",
+    "polymer": "Polymer/polymer#^1.5.0",
     "app-route": "PolymerElements/app-route#^0.9.1",
     "app-layout": "PolymerElements/app-layout#^0.9.0",
     "tpa-top-bar": "ING-Group/tpa-top-bar",
@@ -32,5 +32,8 @@
   "ignore": [],
   "scripts": {
     "postinstall": "gulp fix-api-eol"
+  },
+  "resolutions": {
+    "polymer": "^1.5.0"
   }
 }
