--- a/app/manifest.json
+++ b/app/manifest.json
@@ -42,5 +42,6 @@
   "background_color": "#FF6600",
   "display": "standalone",
   "theme_color": "#FF6600",
-  "start_url": "./index.html"
+  "start_url": "./index.html",
+  "gcm_sender_id":"996435150963"
 }
